shawk/awk/rdpg/src/compiler/parser/lexer/tests/accept/tok_err_stderr.txt
error: data/tok_err.txt:1:3
unexpected: 'non-terminal' with value 'bar'
  expected: 'foo'
    1 | bar BAZ
      | ^
error: data/tok_err.txt:1:7
unexpected: 'terminal' with value 'BAZ'
  expected: 'zig', 'zag' 
    1 | bar BAZ
      |     ^
